# sideral

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
example/joined_table_inheritance/: main.py  models.py  repository.py
example/many_to_many/: database.conf  main.py  models.py  repository.py
example/many_to_many_self_association/: main.py  models.py  repository.py
example/one_to_many/: database.conf  main.py  models.py  repository.py
example/one_to_one_self_association/: main.py  models.py  repository.py
example/single_table_inheritance/: main.py  models.py  repository.py
src/sideral/: __init__.py  command.py  errors.py  loader.py  persister.py  proxy.py  repository.py  result.py  schema.py  session.py  strategy.py  utils.py
src/sideral/annotation/: __init__.py  annotations.py  column.py  override.py  private_list.py  relationships.py  utils.py
src/sideral/event/: __init__.py  events.py  listeners.py
src/sideral/mapper/: __init__.py  model.py  properties.py
src/sideral/query/: __init__.py  builder.py  condition.py  interfaces.py  utils.py
tests/: conftest.py  repository.py  test_association_crud.py  test_models_crud.py  test_orm.py  test_sql.py
tests/models/: __init__.py  joined_table_inheritance.py  many_to_many.py  many_to_many_self_association.py  one_to_many.py  one_to_one.py  one_to_one_self_association.py  single_table_inheritance.py  standard_model.py  test_info.py
