# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sideral"
version = "0.0.1"
description = "ORM framework for MySQL"
readme = "README.md"
authors = [{ name = "dafine"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
keywords = ["orm", "mysql"]
dependencies = [
    "mysql-connector-python >= 8.0.27"
]
requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/dafine-dev/sideral"