[metadata]
name = sideral
version = 0.0.1
description = orm framework foy mysql
author = dafine
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    sideral
install_requires =
    mysql-connector-python>=8.0.27
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    tox>=3.25.0
    pytest>=7.1.0
    pytest-cov>=3.0.0
